# gba-emulator-android

./: .gitignore  .gitlab-ci.yml  ACKNOWLEDGMENTS.md  CHANGELOG.md  CMakeLists.txt  MVP.md  README.md  SkyEmu.wasm  build-send-apk.sh  default.nix  flake.nix  garnachaboy_libretro.info
.github/workflows/: deploy_android.yml  deploy_freebsd.yml  deploy_ios.yml  deploy_linux.yml  deploy_mac.yml  deploy_retro_linux.yml  deploy_retro_mac.yml  deploy_retro_win.yml  deploy_web.yml  deploy_win.yml  release.yml
branch/dev/: SkyEmu.js  SkyEmu.wasm  sw.js
commit/0027c064cfb6ac37fe70bf7bdb98fa006b4c0947/: SkyEmu.wasm  sw.js
commit/01516d6798e3652b583e6a366085bb51c43b528d/: SkyEmu.wasm
commit/03281dbb36a555d072279a55667ab3fec514a735/: SkyEmu.wasm  sw.js
commit/0938209643d5d5976b48211d7b9133652e2ceaf7/: SkyEmu.wasm  sw.js
commit/0a7ea275d5a76bd3972fe63bb2b353bbdf1234f7/: SkyEmu.wasm  sw.js
commit/0ba6145e923377f0fd46d6a144ea498761503134/: SkyEmu.wasm  sw.js
commit/0ee58f12c3a4f84eabfc9f3bb88d26dd8c33b13f/: SkyEmu.wasm  sw.js
commit/11b6bfc406fba39b0d86312e567d29cc77030780/: SkyEmu.wasm  sw.js
commit/134d14f1791083229e9af4bdce5b4732fcc91e78/: SkyEmu.wasm  sw.js
commit/17e7fbe42e86455dfbdee66604df8a5a3d2d8cf1/: SkyEmu.wasm  sw.js
commit/18aeeb8d73019b6bb193fbf56bc205f8f936e26a/: SkyEmu.wasm  sw.js
commit/1c4f266997abc69b5fd7e462bcf2ca41a95251ab/: SkyEmu.wasm  sw.js
commit/1c7eac20398d955b2d30120ff10b46c0ba98e41b/: SkyEmu.wasm  sw.js
commit/271b4df116ba384df55a9147ebd1d40dd622d595/: SkyEmu.wasm  sw.js
commit/2b5761da28d065649e3e98399d989988ed7d3e0b/: SkyEmu.wasm  sw.js
commit/36d3bcd63ee67e1f02ef88a3a1bdaf0bb1021945/: SkyEmu.wasm  sw.js
commit/3fd82ed1b7a7c32f417404a4a529ea4c0bf5131f/: SkyEmu.wasm  sw.js
commit/453f054fcbb214d6100b80903663ca5f742491ff/: SkyEmu.wasm  sw.js
commit/46efbcbdb3b902373a09f4724e6d3b1a5acc4af3/: SkyEmu.wasm
commit/47c810ba98964e315ee709f2e6e62c3701e48348/: SkyEmu.wasm
commit/4bde63b9572b5ab53b7738e3c97adddc8b3c3162/: SkyEmu.wasm  index.html  sw.js
commit/51b9ea3e93c662129b6c71c0310b6d21affde238/: SkyEmu.wasm  sw.js
commit/59adfead5b3b419583bcce41da856cea8274e68d/: SkyEmu.js  SkyEmu.wasm  sw.js
commit/5ae0e2ed6f7bc165d31bfe43f6971165ae34afee/: SkyEmu.wasm  sw.js
commit/5d6df7fafc79adfe1953517c6e303b1e267c3090/: SkyEmu.js  SkyEmu.wasm  sw.js
commit/5f2aef75b86bb809ef3bb3608abf715aff74e233/: SkyEmu.wasm  sw.js
commit/602e03f57849a8c86b197477b51131a8f349ad4d/: SkyEmu.wasm  sw.js
commit/6838f537225f3a3ddd02c970fc405806d124dfb6/: SkyEmu.wasm  sw.js
commit/6a34bf4183cc99343fad8c962922305662c58cf3/: SkyEmu.wasm  sw.js
commit/6b167861bdebee89df77844b30bc7776c570da94/: SkyEmu.js  SkyEmu.wasm  sw.js
commit/79ad6b839bed73191cb399e8c84703c58ad4e7c7/: SkyEmu.wasm  sw.js
commit/7b0f31c895c16fa3fea0d0a066aa8e639a3fb0d8/: SkyEmu.wasm  sw.js
commit/7c90d94f0f63b2a2f60680a489e945e164dd46e0/: SkyEmu.wasm  sw.js
commit/7f526486574a529220f9d08d72876f5f37f5cec9/: SkyEmu.wasm  sw.js
commit/858e7be1828bcdf8c11602c33bb0ac0ee3cc12fd/: SkyEmu.wasm  sw.js
docs/: HTTP_CONTROL_SERVER.md
docs/adr/: 0001-mgba-only-core.md  (+3 more)
mgba-android/: README.md  settings.gradle
mgba-android/core/: CMakeLists.txt  build.gradle  consumer-rules.pro
mgba-android/core/src/androidTest/assets/: NOTICE.md
mgba-android/core/src/androidTest/java/com/trebuchetdynamics/emulator/mgba/: MgbaCoreInstrumentedTest.java
mgba-android/core/src/main/cpp/: mgba_android.c  mgba_session.c  mgba_session.h
mgba-android/core/src/main/java/com/trebuchetdynamics/emulator/mgba/: MgbaCore.java  MgbaSession.java
mgba-android/smoke/: CMakeLists.txt  mgba_core_benchmark.c  mgba_core_smoke.c  mgba_session_test.c
src/: arm7.h  cloud.cpp  http_control_server.cpp  http_control_server.h  libretro.c  localization.c  main.c  nds.h  retro_achievements.cpp  shell.html  sw.js.in
tools/: screenshot.py
(+499 files in other folders)
